# REST-Automation-with-python

./: README.rst  pyproject.toml
tests/: test_1-create_validate-pet.py  test_2-update_validate-pet.py  test_3-delete_validate-pet.py
tradeix/: __init__.py
tradeix.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
