[tool.poetry]
name = "TradeIX"
version = "0.1.0"
description = "TechTest - Rest Sample Api Automation"
authors = ["Jai-Gogineni <jai.gogineni@clearscore.com>"]

[tool.poetry.dependencies]
python = "^2.7"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
